Block threadsafe GL and DMABUF on NVIDIA binary drivers older than 530.0
Categories
(Core :: Graphics: WebRender, defect, P2)
Tracking
()
People
(Reporter: aosmond, Assigned: aosmond)
References
(Depends on 1 open bug, Blocks 1 open bug)
Details
(Keywords: crash, topcrash, topcrash-startup)
Crash Data
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
dmeehan
:
approval-mozilla-beta+
|
Details | Review |
+++ This bug was initially created as a clone of Bug #1788573 +++
Crash report: https://crash-stats.mozilla.org/report/index/d9dfc4cf-fa65-4e51-83ca-5a8e60220828
Reason: SIGSEGV / SI_KERNEL
Top 10 frames of crashing thread:
0 libnvidia-eglcore.so.515.65.01 NvGlEglGetFunctions
1 libnvidia-eglcore.so.515.65.01 NvGlEglApiInit
2 libnvidia-eglcore.so.515.65.01 NvGlEglApiInit
3 libEGL_nvidia.so.0 NvEglwlaf47906in
4 libEGL_nvidia.so.0 NvEglwlaf47906in
5 libEGL_nvidia.so.0 <.text ELF section in libEGL_nvidia.so.515.65.01>
6 libEGL_nvidia.so.0 NvEglwlaf47906in
7 libEGL_nvidia.so.0 NvEglwlaf47906in
8 libxul.so DMABufSurfaceRGBA::ReleaseTextures widget/gtk/DMABufSurface.cpp:679
9 libxul.so mozilla::wr::RenderDMABUFTextureHost::ClearCachedResources gfx/webrender_bindings/RenderDMABUFTextureHost.cpp:72
The crash appears to be triggered if an external monitor is connected/disconnected while the computer is sleeping. I can confirm this if desired. I can also supply about 10 other crash reports with the same problem, more system information, or do other debugging steps.
This might be similar to https://bugzilla.mozilla.org/show_bug.cgi?id=1737834, but that seems to be caused by a memory leak and shows up after firefox is left running for a while.
I'm using the 515 version the nvidia drivers, but I believe that this bug was present with the 510 version as well.
| Assignee | ||
Comment 1•3 years ago
|
||
Let's try blocking DMABUF in 510 (inclusive) to 530 (exclusive) based on discussion in bug 1788573. We get daily crashes in nightly so we can easily verify this over the next few days.
| Assignee | ||
Comment 2•3 years ago
|
||
We are seeing a large uptick in crashes across all channels with the
NVIDIA binary drivers, including 510, 515, 520, and 525. This crash is
tracked in bug 1788573.
Updated•3 years ago
|
Updated•3 years ago
|
Comment 4•3 years ago
|
||
The next release (bug 1788573 comment 26) after this one should have the fix: https://www.phoronix.com/news/NVIDIA-530.30.02-Linux-Beta
Comment 5•3 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 6•3 years ago
|
||
We are doing a downloadable blocklist entry for 110 release and earlier, but we are going to want to uplift this to 111 beta once we confirm the crash drop off.
Comment 7•3 years ago
|
||
:aosmond in terms of timing, the 111 beta cycle is over and next week is RC week.
Given the volume on nightly is so low, wondering how long it would take to be confident versus the risk in uplifting it before 111 RC1 build on Monday?
| Assignee | ||
Comment 8•3 years ago
•
|
||
The feature will need to be blocked either via uplift or a downloadable blocklist request. I consider the uplift low risk, so I can either request uplift now, or amend the downloadable blocklist rules to include the beta?
Comment 9•3 years ago
|
||
Might be the better option to request an uplift now.
I'll take some uplift requests over the weekend before RC and can include this based on the risk.
| Assignee | ||
Comment 10•3 years ago
|
||
Comment on attachment 9320898 [details]
Bug 1820055 - Block threadsafe GL and DMABUF on NVIDIA binary drivers older than 530.0.
Beta/Release Uplift Approval Request
- User impact if declined: Crashes on suspend/resume/in general with NVIDIA binary driver on Linux
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: Bug 1820181
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Just a blocklist update. The features being blocked are optional and the fallback paths should be well tested already.
- String changes made/needed:
- Is Android affected?: No
Updated•3 years ago
|
Updated•3 years ago
|
Comment 11•3 years ago
|
||
Comment on attachment 9320898 [details]
Bug 1820055 - Block threadsafe GL and DMABUF on NVIDIA binary drivers older than 530.0.
Approved for 111.0 RC1
Comment 12•3 years ago
|
||
| bugherder uplift | ||
Description
•