Bug 1820055 - Block threadsafe GL and DMABUF on NVIDIA binary drivers older than 530.0. r=gfx-reviewers,gw, a=dmeehan

We are seeing a large uptick in crashes across all channels with the
NVIDIA binary drivers, including 470, 510, 515, 520, and 525. This
crash is tracked in bug 1788573.

Differential Revision: https://phabricator.services.mozilla.com/D171512